Fix splash bar spacing so content isnt overlapped

--- a/app/assets/stylesheets/components/navbar.scss
+++ b/app/assets/stylesheets/components/navbar.scss
@@ -77,7 +77,7 @@
 }
 
 .splash-navbar-space {
-  height: 8rem;
+  height: 12rem;
 }
 
 .signin-navbar-space {
